// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_large__19x8y1k5"
      data-has-background="true"
    >
      <span
        class="styles__19x8y1k12 styles_shape_circle__19x8y1k13 styles_size_large__19x8y1k15"
        style="--_18799yd0: 7rem; --_18799yd1: var(--rwwhsl5j); --_18799yd2: var(--rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_large__19x8y1k5"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_circle__19x8y1k3 styles_size_large__19x8y1k5"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_large__19x8y1k5"
      data-has-background="false"
      style="background-image: url("/src/components/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_large__19x8y1k5"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_headingLarge__m4c9ow17 style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_circle__19x8y1k3 styles_size_large__19x8y1k5"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_strong__m4c9ow8 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_headingLarge__m4c9ow17 style_undefined_compound_25__m4c9ow24"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_large__19x8y1k5"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__19x8y1kd styles_shape_circle__19x8y1ke styles_size_large__19x8y1kg"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_stronger__vbm0wq5 styles_sentiment_neutral__vbm0wq9 styles_size_large__vbm0wqe styles_undefined_compound_50__vbm0wq1y"
          viewBox="0 0 20 20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_headingLarge__m4c9ow17 style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size large > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_large__19x8y1k5"
      data-has-background="false"
    >
      <div
        class="styles__19x8y1ko styles_shape_circle__19x8y1kp styles_size_large__19x8y1kr"
      >
        <svg
          class="styles__19x8y1k1d styles_shape_circle__19x8y1k1e styles_small__11yzunl2 styles_primary__11yzunl5"
          viewBox="0 0 64 64"
        >
          <g
            class="User"
          >
            <g
              class=".Square"
            >
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#EEF"
              />
            </g>
            <g
              class="User"
            >
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#4F0599"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#A365F6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_medium__19x8y1k6"
      data-has-background="true"
    >
      <span
        class="styles__19x8y1k12 styles_shape_circle__19x8y1k13 styles_size_medium__19x8y1k16"
        style="--_18799yd0: var(--rwwhsl9n); --_18799yd1: var(--rwwhsl5j); --_18799yd2: var(--rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_medium__19x8y1k6"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_circle__19x8y1k3 styles_size_medium__19x8y1k6"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_medium__19x8y1k6"
      data-has-background="false"
      style="background-image: url("/src/components/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_medium__19x8y1k6"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_headingSmall__m4c9ow1a style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_circle__19x8y1k3 styles_size_medium__19x8y1k6"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_strong__m4c9ow8 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_headingSmall__m4c9ow1a style_undefined_compound_25__m4c9ow24"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_medium__19x8y1k6"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__19x8y1kd styles_shape_circle__19x8y1ke styles_size_medium__19x8y1kh"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_stronger__vbm0wq5 styles_sentiment_neutral__vbm0wq9 styles_size_large__vbm0wqe styles_undefined_compound_50__vbm0wq1y"
          viewBox="0 0 20 20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_headingSmall__m4c9ow1a style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size medium > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_medium__19x8y1k6"
      data-has-background="false"
    >
      <div
        class="styles__19x8y1ko styles_shape_circle__19x8y1kp styles_size_medium__19x8y1ks"
      >
        <svg
          class="styles__19x8y1k1d styles_shape_circle__19x8y1k1e styles_small__11yzunl2 styles_primary__11yzunl5"
          viewBox="0 0 64 64"
        >
          <g
            class="User"
          >
            <g
              class=".Square"
            >
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#EEF"
              />
            </g>
            <g
              class="User"
            >
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#4F0599"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#A365F6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_small__19x8y1k7"
      data-has-background="true"
    >
      <span
        class="styles__19x8y1k12 styles_shape_circle__19x8y1k13 styles_size_small__19x8y1k17"
        style="--_18799yd0: var(--rwwhsl9h); --_18799yd1: var(--rwwhsl5j); --_18799yd2: var(--rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_small__19x8y1k7"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_circle__19x8y1k3 styles_size_small__19x8y1k7"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_small__19x8y1k7"
      data-has-background="false"
      style="background-image: url("/src/components/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_small__19x8y1k7"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_circle__19x8y1k3 styles_size_small__19x8y1k7"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_strong__m4c9ow8 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_25__m4c9ow24"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_small__19x8y1k7"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__19x8y1kd styles_shape_circle__19x8y1ke styles_size_small__19x8y1ki"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_stronger__vbm0wq5 styles_sentiment_neutral__vbm0wq9 styles_size_large__vbm0wqe styles_undefined_compound_50__vbm0wq1y"
          viewBox="0 0 20 20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size small > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_small__19x8y1k7"
      data-has-background="false"
    >
      <div
        class="styles__19x8y1ko styles_shape_circle__19x8y1kp styles_size_small__19x8y1kt"
      >
        <svg
          class="styles__19x8y1k1d styles_shape_circle__19x8y1k1e styles_small__11yzunl2 styles_primary__11yzunl5"
          viewBox="0 0 64 64"
        >
          <g
            class="User"
          >
            <g
              class=".Square"
            >
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#EEF"
              />
            </g>
            <g
              class="User"
            >
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#4F0599"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#A365F6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_xsmall__19x8y1k8"
      data-has-background="true"
    >
      <span
        class="styles__19x8y1k12 styles_shape_circle__19x8y1k13 styles_size_xsmall__19x8y1k18"
        style="--_18799yd0: var(--rwwhsl9d); --_18799yd1: var(--rwwhsl5j); --_18799yd2: var(--rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_xsmall__19x8y1k8"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_circle__19x8y1k3 styles_size_xsmall__19x8y1k8"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_xsmall__19x8y1k8"
      data-has-background="false"
      style="background-image: url("/src/components/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_xsmall__19x8y1k8"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_captionSmall__m4c9owv style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_circle__19x8y1k3 styles_size_xsmall__19x8y1k8"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_strong__m4c9ow8 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_captionSmall__m4c9owv style_undefined_compound_25__m4c9ow24"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_xsmall__19x8y1k8"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__19x8y1kd styles_shape_circle__19x8y1ke styles_size_xsmall__19x8y1kj"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_stronger__vbm0wq5 styles_sentiment_neutral__vbm0wq9 styles_size_large__vbm0wqe styles_undefined_compound_50__vbm0wq1y"
          viewBox="0 0 20 20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__19x8y1kz styles_shape_circle__19x8y1k10"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_captionSmall__m4c9owv style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape circle > renders correctly with shape circle and size xsmall > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_circle__19x8y1k3 styles_size_xsmall__19x8y1k8"
      data-has-background="false"
    >
      <div
        class="styles__19x8y1ko styles_shape_circle__19x8y1kp styles_size_xsmall__19x8y1ku"
      >
        <svg
          class="styles__19x8y1k1d styles_shape_circle__19x8y1k1e styles_small__11yzunl2 styles_primary__11yzunl5"
          viewBox="0 0 64 64"
        >
          <g
            class="User"
          >
            <g
              class=".Square"
            >
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#EEF"
              />
            </g>
            <g
              class="User"
            >
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#4F0599"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#A365F6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_large__19x8y1k5 styles_undefined_compound_0__19x8y1k9"
      data-has-background="true"
    >
      <span
        class="styles__19x8y1k12 styles_shape_square__19x8y1k14 styles_size_large__19x8y1k15 styles_undefined_compound_0__19x8y1k19"
        style="--_18799yd0: 7rem; --_18799yd1: var(--rwwhsl5j); --_18799yd2: var(--rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_large__19x8y1k5 styles_undefined_compound_0__19x8y1k9"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_square__19x8y1k4 styles_size_large__19x8y1k5 styles_undefined_compound_0__19x8y1k9"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_large__19x8y1k5 styles_undefined_compound_0__19x8y1k9"
      data-has-background="false"
      style="background-image: url("/src/components/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_large__19x8y1k5 styles_undefined_compound_0__19x8y1k9"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_headingLarge__m4c9ow17 style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_square__19x8y1k4 styles_size_large__19x8y1k5 styles_undefined_compound_0__19x8y1k9"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_strong__m4c9ow8 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_headingLarge__m4c9ow17 style_undefined_compound_25__m4c9ow24"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_large__19x8y1k5 styles_undefined_compound_0__19x8y1k9"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__19x8y1kd styles_shape_square__19x8y1kf styles_size_large__19x8y1kg styles_undefined_compound_0__19x8y1kk"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_stronger__vbm0wq5 styles_sentiment_neutral__vbm0wq9 styles_size_large__vbm0wqe styles_undefined_compound_50__vbm0wq1y"
          viewBox="0 0 20 20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_headingLarge__m4c9ow17 style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size large > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_large__19x8y1k5 styles_undefined_compound_0__19x8y1k9"
      data-has-background="false"
    >
      <div
        class="styles__19x8y1ko styles_shape_square__19x8y1kq styles_size_large__19x8y1kr styles_undefined_compound_0__19x8y1kv"
      >
        <svg
          class="styles__19x8y1k1d styles_shape_square__19x8y1k1f styles_small__11yzunl2 styles_primary__11yzunl5"
          viewBox="0 0 64 64"
        >
          <g
            class="User"
          >
            <g
              class=".Square"
            >
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#EEF"
              />
            </g>
            <g
              class="User"
            >
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#4F0599"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#A365F6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_medium__19x8y1k6 styles_undefined_compound_1__19x8y1ka"
      data-has-background="true"
    >
      <span
        class="styles__19x8y1k12 styles_shape_square__19x8y1k14 styles_size_medium__19x8y1k16 styles_undefined_compound_1__19x8y1k1a"
        style="--_18799yd0: var(--rwwhsl9n); --_18799yd1: var(--rwwhsl5j); --_18799yd2: var(--rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_medium__19x8y1k6 styles_undefined_compound_1__19x8y1ka"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_square__19x8y1k4 styles_size_medium__19x8y1k6 styles_undefined_compound_1__19x8y1ka"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_medium__19x8y1k6 styles_undefined_compound_1__19x8y1ka"
      data-has-background="false"
      style="background-image: url("/src/components/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_medium__19x8y1k6 styles_undefined_compound_1__19x8y1ka"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_headingSmall__m4c9ow1a style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_square__19x8y1k4 styles_size_medium__19x8y1k6 styles_undefined_compound_1__19x8y1ka"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_strong__m4c9ow8 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_headingSmall__m4c9ow1a style_undefined_compound_25__m4c9ow24"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_medium__19x8y1k6 styles_undefined_compound_1__19x8y1ka"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__19x8y1kd styles_shape_square__19x8y1kf styles_size_medium__19x8y1kh styles_undefined_compound_1__19x8y1kl"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_stronger__vbm0wq5 styles_sentiment_neutral__vbm0wq9 styles_size_large__vbm0wqe styles_undefined_compound_50__vbm0wq1y"
          viewBox="0 0 20 20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_headingSmall__m4c9ow1a style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size medium > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_medium__19x8y1k6 styles_undefined_compound_1__19x8y1ka"
      data-has-background="false"
    >
      <div
        class="styles__19x8y1ko styles_shape_square__19x8y1kq styles_size_medium__19x8y1ks styles_undefined_compound_1__19x8y1kw"
      >
        <svg
          class="styles__19x8y1k1d styles_shape_square__19x8y1k1f styles_small__11yzunl2 styles_primary__11yzunl5"
          viewBox="0 0 64 64"
        >
          <g
            class="User"
          >
            <g
              class=".Square"
            >
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#EEF"
              />
            </g>
            <g
              class="User"
            >
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#4F0599"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#A365F6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_small__19x8y1k7 styles_undefined_compound_2__19x8y1kb"
      data-has-background="true"
    >
      <span
        class="styles__19x8y1k12 styles_shape_square__19x8y1k14 styles_size_small__19x8y1k17 styles_undefined_compound_2__19x8y1k1b"
        style="--_18799yd0: var(--rwwhsl9h); --_18799yd1: var(--rwwhsl5j); --_18799yd2: var(--rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_small__19x8y1k7 styles_undefined_compound_2__19x8y1kb"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_square__19x8y1k4 styles_size_small__19x8y1k7 styles_undefined_compound_2__19x8y1kb"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_small__19x8y1k7 styles_undefined_compound_2__19x8y1kb"
      data-has-background="false"
      style="background-image: url("/src/components/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_small__19x8y1k7 styles_undefined_compound_2__19x8y1kb"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_square__19x8y1k4 styles_size_small__19x8y1k7 styles_undefined_compound_2__19x8y1kb"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_strong__m4c9ow8 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_25__m4c9ow24"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_small__19x8y1k7 styles_undefined_compound_2__19x8y1kb"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__19x8y1kd styles_shape_square__19x8y1kf styles_size_small__19x8y1ki styles_undefined_compound_2__19x8y1km"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_stronger__vbm0wq5 styles_sentiment_neutral__vbm0wq9 styles_size_large__vbm0wqe styles_undefined_compound_50__vbm0wq1y"
          viewBox="0 0 20 20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size small > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_small__19x8y1k7 styles_undefined_compound_2__19x8y1kb"
      data-has-background="false"
    >
      <div
        class="styles__19x8y1ko styles_shape_square__19x8y1kq styles_size_small__19x8y1kt styles_undefined_compound_2__19x8y1kx"
      >
        <svg
          class="styles__19x8y1k1d styles_shape_square__19x8y1k1f styles_small__11yzunl2 styles_primary__11yzunl5"
          viewBox="0 0 64 64"
        >
          <g
            class="User"
          >
            <g
              class=".Square"
            >
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#EEF"
              />
            </g>
            <g
              class="User"
            >
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#4F0599"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#A365F6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant colors 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_xsmall__19x8y1k8 styles_undefined_compound_3__19x8y1kc"
      data-has-background="true"
    >
      <span
        class="styles__19x8y1k12 styles_shape_square__19x8y1k14 styles_size_xsmall__19x8y1k18 styles_undefined_compound_3__19x8y1k1c"
        style="--_18799yd0: var(--rwwhsl9d); --_18799yd1: var(--rwwhsl5j); --_18799yd2: var(--rwwhsl67);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_xsmall__19x8y1k8 styles_undefined_compound_3__19x8y1kc"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant icon and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_square__19x8y1k4 styles_size_xsmall__19x8y1k8 styles_undefined_compound_3__19x8y1kc"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.75 1C1.7835 1 1 1.7835 1 2.75V5.08333C1 6.04983 1.7835 6.83333 2.75 6.83333H5.08333C6.04983 6.83333 6.83333 6.04983 6.83333 5.08333V2.75C6.83333 1.7835 6.04983 1 5.08333 1H2.75Z"
          />
          <path
            d="M2.75 9.16667C1.7835 9.16667 1 9.95017 1 10.9167V13.25C1 14.2165 1.7835 15 2.75 15H5.08333C6.04983 15 6.83333 14.2165 6.83333 13.25V10.9167C6.83333 9.95017 6.04983 9.16667 5.08333 9.16667H2.75Z"
          />
          <path
            d="M9.16667 2.75C9.16667 1.7835 9.95017 1 10.9167 1H13.25C14.2165 1 15 1.7835 15 2.75V5.08333C15 6.04983 14.2165 6.83333 13.25 6.83333H10.9167C9.95017 6.83333 9.16667 6.04983 9.16667 5.08333V2.75Z"
          />
          <path
            d="M10.9167 9.16667C9.95017 9.16667 9.16667 9.95017 9.16667 10.9167V13.25C9.16667 14.2165 9.95017 15 10.9167 15H13.25C14.2165 15 15 14.2165 15 13.25V10.9167C15 9.95017 14.2165 9.16667 13.25 9.16667H10.9167Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_xsmall__19x8y1k8 styles_undefined_compound_3__19x8y1kc"
      data-has-background="false"
      style="background-image: url("/src/components/Avatar/__stories__/assets/avatar.svg"); background-size: cover;"
    />
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant text 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_xsmall__19x8y1k8 styles_undefined_compound_3__19x8y1kc"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_captionSmall__m4c9owv style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant text and sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_neutral__19x8y1k1 styles_shape_square__19x8y1k4 styles_size_xsmall__19x8y1k8 styles_undefined_compound_3__19x8y1kc"
      data-has-background="true"
    >
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_strong__m4c9ow8 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_captionSmall__m4c9owv style_undefined_compound_25__m4c9ow24"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant text and upload 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_xsmall__19x8y1k8 styles_undefined_compound_3__19x8y1kc"
      data-has-background="true"
      data-testid="avatar"
      role="button"
    >
      <div
        class="styles__19x8y1kd styles_shape_square__19x8y1kf styles_size_xsmall__19x8y1kj styles_undefined_compound_3__19x8y1kn"
      >
        <svg
          class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_stronger__vbm0wq5 styles_sentiment_neutral__vbm0wq9 styles_size_large__vbm0wqe styles_undefined_compound_50__vbm0wq1y"
          viewBox="0 0 20 20"
        >
          <path
            d="M9.25 13.25a.75.75 0 0 0 1.5 0V4.636l2.955 3.129a.75.75 0 0 0 1.09-1.03l-4.25-4.5a.75.75 0 0 0-1.09 0l-4.25 4.5a.75.75 0 1 0 1.09 1.03L9.25 4.636z"
          />
          <path
            d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </div>
      <div
        class="styles__19x8y1kz styles_shape_square__19x8y1k11"
      >
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_stronger__m4c9ow9 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_captionSmall__m4c9owv style_undefined_compound_26__m4c9ow25"
        >
          UV
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`avatar > renders correctly with shape square > renders correctly with shape square and size xsmall > renders correctly with variant user 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__19x8y1k0 styles_sentiment_primary__19x8y1k2 styles_shape_square__19x8y1k4 styles_size_xsmall__19x8y1k8 styles_undefined_compound_3__19x8y1kc"
      data-has-background="false"
    >
      <div
        class="styles__19x8y1ko styles_shape_square__19x8y1kq styles_size_xsmall__19x8y1ku styles_undefined_compound_3__19x8y1ky"
      >
        <svg
          class="styles__19x8y1k1d styles_shape_square__19x8y1k1f styles_small__11yzunl2 styles_primary__11yzunl5"
          viewBox="0 0 64 64"
        >
          <g
            class="User"
          >
            <g
              class=".Square"
            >
              <path
                class="fillWeak"
                d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                fill="#EEF"
              />
            </g>
            <g
              class="User"
            >
              <path
                class="fill"
                clip-rule="evenodd"
                d="M32 33.7c-5.819 0-10.556 4.776-10.556 10.692v1.315l.101.067c.328.213.875.518 1.698.83 1.648.626 4.414 1.285 8.757 1.285s7.11-.66 8.756-1.284c.824-.313 1.371-.618 1.699-.83l.1-.068v-1.315C42.555 38.476 37.82 33.7 32 33.7m11.555 12.49.712.704a1 1 0 0 0 .288-.703v-1.799c0-6.999-5.61-12.692-12.555-12.692s-12.556 5.693-12.556 12.692v1.799a1 1 0 0 0 .29.703l.71-.703-.71.704.001.001.003.003.006.006.016.015a3 3 0 0 0 .183.161c.119.096.287.223.512.37.45.292 1.125.662 2.079 1.024 1.909.724 4.92 1.414 9.466 1.414s7.557-.69 9.466-1.414c.954-.362 1.629-.732 2.08-1.024.224-.147.392-.273.51-.37a4 4 0 0 0 .184-.161l.015-.015.007-.006.002-.003.002-.001-.71-.704Z"
                fill="#4F0599"
                fill-rule="evenodd"
              />
              <path
                class="fillStrong"
                clip-rule="evenodd"
                d="M32 15.461c-3.364 0-6.112 2.763-6.112 6.196s2.747 6.195 6.111 6.195c3.365 0 6.112-2.763 6.112-6.195S35.364 15.461 32 15.461m-8.112 6.196c0-4.515 3.62-8.196 8.111-8.196s8.112 3.68 8.112 8.196c0 4.515-3.62 8.195-8.111 8.195s-8.112-3.68-8.112-8.195"
                fill="#A365F6"
                fill-rule="evenodd"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
